testing fix for grey bg images on mobile device at home creen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2931,13 +2931,28 @@ nav.nav-menu-show {
     width: 220px; }
 
 .service_bg_1 {
-  background-image: linear-gradient(to right bottom, rgba(42, 52, 57, 0.45), 25%, rgba(42, 52, 57, 0.55)), url(../img/group-lessons.jpg); }
+  background-image: linear-gradient(to right bottom, rgba(42, 52, 57, 0.45), 25%, rgba(42, 52, 57, 0.55)), url(../img/group-lessons.jpg);
+  background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .service_bg_1 {
+      background-image: none; } }
 
 .service_bg_2 {
   background-image: linear-gradient(to right bottom, rgba(42, 52, 57, 0.45), 25%, rgba(42, 52, 57, 0.55)), url(../img/1-on-1.jpg); }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .service_bg_2 {
+      background-image: none; } }
 
 .service_bg_3 {
-  background-image: linear-gradient(to right bottom, rgba(42, 52, 57, 0.45), 25%, rgba(42, 52, 57, 0.55)), url(../img/computer-lab.jpg); }
+  background-image: linear-gradient(to right bottom, rgba(42, 52, 57, 0.45), 25%, rgba(42, 52, 57, 0.55)), url(../img/computer-lab.jpg);
+  background-size: cover; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .service_bg_3 {
+      background-image: none; } }
 
 .service_area {
   padding-top: 120px;
@@ -2951,11 +2966,6 @@ nav.nav-menu-show {
       padding-top: 100px;
       padding-bottom: 100px; } }
   .service_area .single_service {
-    background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 30px;
     background-position: center;
